--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Weather Forecast App</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.4/axios.min.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css"> <!-- Link to your CSS -->
 </head>
 
 <body class="bg-[url('bg.img')] bg-cover bg-center bg-no-repeat text-white min-h-screen p-4 flex justify-center items-center">
@@ -38,7 +38,6 @@
                 <div class="text-xl mt-4 sm:mt-0">
                     <img id="weatherIcon" src="https://openweathermap.org/img/wn/01d@2x.png" alt="Weather Icon" class="w-30 h-40 mx-auto sm:w-32 sm:h-44">
                     <p id="weatherDescription">Description</p>
-                    <!-- <p id="precipitation">Precipitation: --%</p> -->
                     <p id="humidity">Humidity: --%</p>
                     <p id="wind">Wind: -- km/h</p>
                 </div>
@@ -49,40 +48,13 @@
         <section class="p-4 rounded-xl shadow-md">
             <h3 class="text-2xl sm:text-3xl font-semibold">5-Day Forecast</h3><br>
             <div id="forecastContainer" class="grid grid-cols-2 sm:grid-cols-5 gap-4 mt-2">
-                <!-- Dynamic Forecast Data -->
-                <div id="card" class="p-6 rounded-2xl shadow-lg text-center transform transition-transform duration-300 ease-in-out hover:scale-110">
-                    <h3 class="text-lg font-semibold">08-02</h3>
-                    <img src="https://openweathermap.org/img/wn/01d.png" alt="Sunny" class="mx-auto my-2 w-16">
-                    <p class="text-xl font-bold">30°C</p>
-                    <p>Sunny</p>
-                </div>
-                <div id="card" class="p-6 rounded-2xl shadow-lg text-center transform transition-transform duration-300 ease-in-out hover:scale-110">
-                    <h3 class="text-lg font-semibold">09-02</h3>
-                    <img src="https://openweathermap.org/img/wn/02d.png" alt="Cloudy" class="mx-auto my-2 w-16">
-                    <p class="text-xl font-bold">28°C</p>
-                    <p>Partly Cloudy</p>
-                </div>
-                <div id="card" class="p-6 rounded-2xl shadow-lg text-center transform transition-transform duration-300 ease-in-out hover:scale-110">
-                    <h3 class="text-lg font-semibold">10-02</h3>
-                    <img src="https://openweathermap.org/img/wn/10d.png" alt="Rainy" class="mx-auto my-2 w-16">
-                    <p class="text-xl font-bold">24°C</p>
-                    <p>Rainy</p>
-                </div>
-                <div id="card" class="p-6 rounded-2xl shadow-lg text-center transform transition-transform duration-300 ease-in-out hover:scale-110">
-                    <h3 class="text-lg font-semibold">11-02</h3>
-                    <img src="https://openweathermap.org/img/wn/03d.png" alt="Cloudy" class="mx-auto my-2 w-16">
-                    <p class="text-xl font-bold">26°C</p>
-                    <p>Cloudy</p>
-                </div>
-                <div id="card" class="p-6 rounded-2xl shadow-lg text-center transform transition-transform duration-300 ease-in-out hover:scale-110">
-                    <h3 class="text-lg font-semibold">12-02</h3>
-                    <img src="https://openweathermap.org/img/wn/13d.png" alt="Snowy" class="mx-auto my-2 w-16">
-                    <p class="text-xl font-bold">-2°C</p>
-                    <p>Snowy</p>
-                </div>
+                <!-- Forecast Data will be displayed here -->
             </div>
         </section>
     </div>
+    
+    <!-- Link to the JavaScript file -->
+    <script src="app.js"></script> <!-- Link to your JS -->
 </body>
-<script src="app.js"></script>
+
 </html>
